added main branch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>learning git command</h1>
-    <p>this is work done in feature two branch
+    <p>this is work done in feature two branch.main branch
     </p>
+
 </body>
 </html>
